# GoContinuum

./: .gitignore  .gitmodules  LICENSE.md  README.md  analyze_cube.py  argparse_actions.py  argparse_parents.py  argparse_process.py  args_proc.py  casa_logging.py  casa_utils.py  combine_peaks.py  common_types.py  continuum_iterative.py  data_handler.py  exec_yclean.py  extract_spectra.py  functions.sh  get_clean.py  get_dirty.py  goco  goco.py  goco.sh  join_cubes.py  logger.py  pbclean.py  pipeline.sh  pyproject.toml  rms_to_header.py  run_clean.py  run_concat.py  run_uvcontsub.py  run_yclean.py  split_ms.py  utils.py  utils.sh  yclean
examples/: source.cfg  yclean.cfg
go_continuum/: afoli.py  argparse_process.py  data_handler.py  environment.py  goco.py
go_continuum/moved_helpers/: clean_tasks.py  logger.py  run_tclean_parallel.py  run_yclean.py  spectra_extractor.py  utils.py
go_continuum/old/: casa_testing.py  combine_peaks.py  functions.sh  goco.sh  join_cubes.py  pbclean.py  rms_to_header.py  run_clean.py  yclean
moved_helpers/: source.cfg  source_multichanrange.cfg  source_nochanrange.cfg  source_singlechanrange.cfg
moved_helpers/config/: default.cfg
